# Chichev-CT-labs-2025

./: CMakeLists.txt  ClassInteractions.cpp  ClassInteractions.hpp  main.cpp
Fractions/: CMakeLists.txt  Fractions.cpp  Fractions.hpp
mymath/: mymath.cpp  mymath.hpp
ourmath/: CMakeLists.txt  ourmath.cpp  ourmath.hpp
road/: CMakeLists.txt  road.cpp  road.hpp
